--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@gsap/react": "^2.1.2",
     "@types/gsap": "^3.0.0",
     "@types/three": "^0.181.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.14.2",
+    "lucide-react": "^0.564.0",
     "next": "16.1.5",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "three": "^0.181.2"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -25,7 +30,9 @@
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.0.7",
+    "shadcn": "^3.8.4",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
